Issue #1291 #1340: Refactor sim code generation for compounds